feat: add aliaces

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,7 +9,17 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@00_app/*": ["src/00_app/*"],
+      "@01_pages/*": ["src/01_pages/*"],
+      "@02_widgets/*": ["src/02_widgets/*"],
+      "@03_features/*": ["src/03_features/*"],
+      "@04_entities/*": ["src/04_entities/*"],
+      "@05_shared/*": ["src/05_shared/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
