--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/node": "^24.1.0",
     "vue": "^3.5.17"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
     "vue-tsc": "^2.2.12"
