--- a/.prettierrc
+++ b/.prettierrc
@@ -13,5 +13,8 @@
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
 
-  "plugins": ["@trivago/prettier-plugin-sort-imports"]
+  "plugins": [
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ]
 }
