--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "vue": "^3.5.17"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^24.1.0",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-vue": "^10.3.0",
+    "globals": "^16.3.0",
     "postcss-html": "^1.8.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
@@ -30,7 +34,9 @@
     "stylelint-order": "^7.0.0",
     "stylelint-scss": "^6.12.1",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.38.0",
     "vite": "^7.0.4",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.2.12"
   }
 }
