--- a/package.json
+++ b/package.json
@@ -7,7 +7,22 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint:style": "stylelint \"**/*.{vue,scss}\" --fix"
+    "lint:eslint": "eslint --fix \"src/**/*.{js,ts,vue}\"",
+    "lint:prettier": "prettier --write \"src/**/*.{js,ts,vue,css,scss,md,json}\"",
+    "lint:stylelint": "stylelint --fix \"src/**/*.{css,scss,vue}\"",
+    "precommit": "lint-staged",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,vue}": [
+      "yarn run lint:eslint"
+    ],
+    "**/*.{css,scss,vue}": [
+      "yarn run lint:stylelint"
+    ],
+    "**/*.{js,ts,vue,css,scss,md,json}": [
+      "yarn run lint:prettier"
+    ]
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -23,6 +38,8 @@
     "eslint": "^9.32.0",
     "eslint-plugin-vue": "^10.3.0",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "postcss-html": "^1.8.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
